--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "framer-motion": "^12.18.1",
     "lucide-react": "^0.519.0",
     "next": "15.3.4",
+    "plaid": "^36.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.3.1"
