--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "plaid": "^36.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-plaid-link": "^4.0.1",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
